chap4/y.output
状态 2 conflicts: 1 shift/reduce
状态 35 conflicts: 1 shift/reduce
状态 38 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | lvalue ASSIGN exp
    4    | INT
    5    | STRING
    6    | NIL
    7    | LPAREN RPAREN
    8    | LPAREN expseq RPAREN
    9    | MINUS exp
   10    | exp PLUS exp
   11    | exp MINUS exp
   12    | exp TIMES exp
   13    | exp DIVIDE exp
   14    | exp EQ exp
   15    | exp NEQ exp
   16    | exp LT exp
   17    | exp LE exp
   18    | exp GT exp
   19    | exp GE exp
   20    | exp AND exp
   21    | exp OR exp
   22    | funcall
   23    | ID LBRACK exp RBRACK OF exp
   24    | ID LBRACE RBRACE
   25    | ID LBRACE asseq RBRACE
   26    | IF exp THEN exp
   27    | IF exp THEN exp ELSE exp
   28    | WHILE exp DO exp
   29    | FOR ID ASSIGN exp TO exp DO exp
   30    | BREAK
   31    | LET decs IN END
   32    | LET decs IN expseq END
   33    | LPAREN error RPAREN
   34    | error SEMICOLON exp

   35 lvalue: ID
   36       | lvalue DOT ID
   37       | lvalue LBRACK exp RBRACK
   38       | ID LBRACK exp RBRACK

   39 expseq: exp
   40       | exp SEMICOLON expseq

   41 funcall: ID LPAREN RPAREN
   42        | ID LPAREN paraseq RPAREN

   43 paraseq: exp
   44        | exp COMMA paraseq

   45 asseq: ID EQ exp
   46      | ID EQ exp COMMA asseq

   47 decs: dec decs
   48     | %empty

   49 dec: tydecs
   50    | vardec
   51    | fundecs

   52 tydecs: tydec
   53       | tydec tydecs

   54 tydec: TYPE ID EQ ty

   55 ty: ID
   56   | LBRACE tyfields RBRACE
   57   | ARRAY OF ID

   58 tyfields: tyfield
   59         | %empty

   60 tyfield: ID COLON ID
   61        | ID COLON ID COMMA tyfield

   62 vardec: VAR ID ASSIGN exp
   63       | VAR ID COLON ID ASSIGN exp

   64 fundecs: fundec
   65        | fundec fundecs

   66 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   67       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp


Terminals, with rules where they appear

$end (0) 0
error (256) 33 34
ID (258) 23 24 25 29 35 36 38 41 42 45 46 54 55 57 60 61 62 63 66 67
STRING (259) 5
INT (260) 4
COMMA (261) 44 46 61
COLON (262) 60 61 63 67
SEMICOLON (263) 34 40
LPAREN (264) 7 8 33 41 42 66 67
RPAREN (265) 7 8 33 41 42 66 67
LBRACK (266) 23 37 38
RBRACK (267) 23 37 38
LBRACE (268) 24 25 56
RBRACE (269) 24 25 56
DOT (270) 36
PLUS (271) 10
MINUS (272) 9 11
TIMES (273) 12
DIVIDE (274) 13
EQ (275) 14 45 46 54 66 67
NEQ (276) 15
LT (277) 16
LE (278) 17
GT (279) 18
GE (280) 19
AND (281) 20
OR (282) 21
ASSIGN (283) 3 29 62 63
ARRAY (284) 57
IF (285) 26 27
THEN (286) 26 27
ELSE (287) 27
WHILE (288) 28
FOR (289) 29
TO (290) 29
DO (291) 28 29
LET (292) 31 32
IN (293) 31 32
END (294) 31 32
OF (295) 23 57
BREAK (296) 30
NIL (297) 6
FUNCTION (298) 66 67
VAR (299) 62 63
TYPE (300) 54
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    左： 0
program (48)
    左： 1, 右： 0
exp (49)
    左： 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34, 右： 1 3 9 10 11 12 13 14 15
    16 17 18 19 20 21 23 26 27 28 29 34 37 38 39 40 43 44 45 46 62
    63 66 67
lvalue (50)
    左： 35 36 37 38, 右： 2 3 36 37
expseq (51)
    左： 39 40, 右： 8 32 40
funcall (52)
    左： 41 42, 右： 22
paraseq (53)
    左： 43 44, 右： 42 44
asseq (54)
    左： 45 46, 右： 25 46
decs (55)
    左： 47 48, 右： 31 32 47
dec (56)
    左： 49 50 51, 右： 47
tydecs (57)
    左： 52 53, 右： 49 53
tydec (58)
    左： 54, 右： 52 53
ty (59)
    左： 55 56 57, 右： 54
tyfields (60)
    左： 58 59, 右： 56 66 67
tyfield (61)
    左： 60 61, 右： 58 61
vardec (62)
    左： 62 63, 右： 50
fundecs (63)
    左： 64 65, 右： 51 65
fundec (64)
    左： 66 67, 右： 64 65


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    program  转到状态 13
    exp      转到状态 14
    lvalue   转到状态 15
    funcall  转到状态 16


State 1

   34 exp: error . SEMICOLON exp

    SEMICOLON  shift, and go to state 17


State 2

   23 exp: ID . LBRACK exp RBRACK OF exp
   24    | ID . LBRACE RBRACE
   25    | ID . LBRACE asseq RBRACE
   35 lvalue: ID .
   38       | ID . LBRACK exp RBRACK
   41 funcall: ID . LPAREN RPAREN
   42        | ID . LPAREN paraseq RPAREN

    LPAREN  shift, and go to state 18
    LBRACK  shift, and go to state 19
    LBRACE  shift, and go to state 20

    LBRACK    [reduce using rule 35 (lvalue)]
    $default  reduce using rule 35 (lvalue)


State 3

    5 exp: STRING .

    $default  reduce using rule 5 (exp)


State 4

    4 exp: INT .

    $default  reduce using rule 4 (exp)


State 5

    7 exp: LPAREN . RPAREN
    8    | LPAREN . expseq RPAREN
   33    | LPAREN . error RPAREN

    error   shift, and go to state 21
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    RPAREN  shift, and go to state 22
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 23
    lvalue   转到状态 15
    expseq   转到状态 24
    funcall  转到状态 16


State 6

    9 exp: MINUS . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 25
    lvalue   转到状态 15
    funcall  转到状态 16


State 7

   26 exp: IF . exp THEN exp
   27    | IF . exp THEN exp ELSE exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 26
    lvalue   转到状态 15
    funcall  转到状态 16


State 8

   28 exp: WHILE . exp DO exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 27
    lvalue   转到状态 15
    funcall  转到状态 16


State 9

   29 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 28


State 10

   31 exp: LET . decs IN END
   32    | LET . decs IN expseq END

    FUNCTION  shift, and go to state 29
    VAR       shift, and go to state 30
    TYPE      shift, and go to state 31

    $default  reduce using rule 48 (decs)

    decs     转到状态 32
    dec      转到状态 33
    tydecs   转到状态 34
    tydec    转到状态 35
    vardec   转到状态 36
    fundecs  转到状态 37
    fundec   转到状态 38


State 11

   30 exp: BREAK .

    $default  reduce using rule 30 (exp)


State 12

    6 exp: NIL .

    $default  reduce using rule 6 (exp)


State 13

    0 $accept: program . $end

    $end  shift, and go to state 39


State 14

    1 program: exp .
   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp

    PLUS    shift, and go to state 40
    MINUS   shift, and go to state 41
    TIMES   shift, and go to state 42
    DIVIDE  shift, and go to state 43
    EQ      shift, and go to state 44
    NEQ     shift, and go to state 45
    LT      shift, and go to state 46
    LE      shift, and go to state 47
    GT      shift, and go to state 48
    GE      shift, and go to state 49
    AND     shift, and go to state 50
    OR      shift, and go to state 51

    $default  reduce using rule 1 (program)


State 15

    2 exp: lvalue .
    3    | lvalue . ASSIGN exp
   36 lvalue: lvalue . DOT ID
   37       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 52
    DOT     shift, and go to state 53
    ASSIGN  shift, and go to state 54

    $default  reduce using rule 2 (exp)


State 16

   22 exp: funcall .

    $default  reduce using rule 22 (exp)


State 17

   34 exp: error SEMICOLON . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 55
    lvalue   转到状态 15
    funcall  转到状态 16


State 18

   41 funcall: ID LPAREN . RPAREN
   42        | ID LPAREN . paraseq RPAREN

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    RPAREN  shift, and go to state 56
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 57
    lvalue   转到状态 15
    funcall  转到状态 16
    paraseq  转到状态 58


State 19

   23 exp: ID LBRACK . exp RBRACK OF exp
   38 lvalue: ID LBRACK . exp RBRACK

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 59
    lvalue   转到状态 15
    funcall  转到状态 16


State 20

   24 exp: ID LBRACE . RBRACE
   25    | ID LBRACE . asseq RBRACE

    ID      shift, and go to state 60
    RBRACE  shift, and go to state 61

    asseq  转到状态 62


State 21

   33 exp: LPAREN error . RPAREN
   34    | error . SEMICOLON exp

    SEMICOLON  shift, and go to state 17
    RPAREN     shift, and go to state 63


State 22

    7 exp: LPAREN RPAREN .

    $default  reduce using rule 7 (exp)


State 23

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   39 expseq: exp .
   40       | exp . SEMICOLON expseq

    SEMICOLON  shift, and go to state 64
    PLUS       shift, and go to state 40
    MINUS      shift, and go to state 41
    TIMES      shift, and go to state 42
    DIVIDE     shift, and go to state 43
    EQ         shift, and go to state 44
    NEQ        shift, and go to state 45
    LT         shift, and go to state 46
    LE         shift, and go to state 47
    GT         shift, and go to state 48
    GE         shift, and go to state 49
    AND        shift, and go to state 50
    OR         shift, and go to state 51

    $default  reduce using rule 39 (expseq)


State 24

    8 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 65


State 25

    9 exp: MINUS exp .
   10    | exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp

    $default  reduce using rule 9 (exp)


State 26

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   26    | IF exp . THEN exp
   27    | IF exp . THEN exp ELSE exp

    PLUS    shift, and go to state 40
    MINUS   shift, and go to state 41
    TIMES   shift, and go to state 42
    DIVIDE  shift, and go to state 43
    EQ      shift, and go to state 44
    NEQ     shift, and go to state 45
    LT      shift, and go to state 46
    LE      shift, and go to state 47
    GT      shift, and go to state 48
    GE      shift, and go to state 49
    AND     shift, and go to state 50
    OR      shift, and go to state 51
    THEN    shift, and go to state 66


State 27

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   28    | WHILE exp . DO exp

    PLUS    shift, and go to state 40
    MINUS   shift, and go to state 41
    TIMES   shift, and go to state 42
    DIVIDE  shift, and go to state 43
    EQ      shift, and go to state 44
    NEQ     shift, and go to state 45
    LT      shift, and go to state 46
    LE      shift, and go to state 47
    GT      shift, and go to state 48
    GE      shift, and go to state 49
    AND     shift, and go to state 50
    OR      shift, and go to state 51
    DO      shift, and go to state 67


State 28

   29 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 68


State 29

   66 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   67       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 69


State 30

   62 vardec: VAR . ID ASSIGN exp
   63       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 70


State 31

   54 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 71


State 32

   31 exp: LET decs . IN END
   32    | LET decs . IN expseq END

    IN  shift, and go to state 72


State 33

   47 decs: dec . decs

    FUNCTION  shift, and go to state 29
    VAR       shift, and go to state 30
    TYPE      shift, and go to state 31

    $default  reduce using rule 48 (decs)

    decs     转到状态 73
    dec      转到状态 33
    tydecs   转到状态 34
    tydec    转到状态 35
    vardec   转到状态 36
    fundecs  转到状态 37
    fundec   转到状态 38


State 34

   49 dec: tydecs .

    $default  reduce using rule 49 (dec)


State 35

   52 tydecs: tydec .
   53       | tydec . tydecs

    TYPE  shift, and go to state 31

    TYPE      [reduce using rule 52 (tydecs)]
    $default  reduce using rule 52 (tydecs)

    tydecs  转到状态 74
    tydec   转到状态 35


State 36

   50 dec: vardec .

    $default  reduce using rule 50 (dec)


State 37

   51 dec: fundecs .

    $default  reduce using rule 51 (dec)


State 38

   64 fundecs: fundec .
   65        | fundec . fundecs

    FUNCTION  shift, and go to state 29

    FUNCTION  [reduce using rule 64 (fundecs)]
    $default  reduce using rule 64 (fundecs)

    fundecs  转到状态 75
    fundec   转到状态 38


State 39

    0 $accept: program $end .

    $default  接受


State 40

   10 exp: exp PLUS . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 76
    lvalue   转到状态 15
    funcall  转到状态 16


State 41

   11 exp: exp MINUS . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 77
    lvalue   转到状态 15
    funcall  转到状态 16


State 42

   12 exp: exp TIMES . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 78
    lvalue   转到状态 15
    funcall  转到状态 16


State 43

   13 exp: exp DIVIDE . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 79
    lvalue   转到状态 15
    funcall  转到状态 16


State 44

   14 exp: exp EQ . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 80
    lvalue   转到状态 15
    funcall  转到状态 16


State 45

   15 exp: exp NEQ . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 81
    lvalue   转到状态 15
    funcall  转到状态 16


State 46

   16 exp: exp LT . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 82
    lvalue   转到状态 15
    funcall  转到状态 16


State 47

   17 exp: exp LE . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 83
    lvalue   转到状态 15
    funcall  转到状态 16


State 48

   18 exp: exp GT . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 84
    lvalue   转到状态 15
    funcall  转到状态 16


State 49

   19 exp: exp GE . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 85
    lvalue   转到状态 15
    funcall  转到状态 16


State 50

   20 exp: exp AND . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 86
    lvalue   转到状态 15
    funcall  转到状态 16


State 51

   21 exp: exp OR . exp

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 87
    lvalue   转到状态 15
    funcall  转到状态 16


State 52

   37 lvalue: lvalue LBRACK . exp RBRACK

    error   shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    MINUS   shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    FOR     shift, and go to state 9
    LET     shift, and go to state 10
    BREAK   shift, and go to state 11
    NIL     shift, and go to state 12

    exp      转到状态 88
    lvalue   转到状态 15
    funcall  转到状态 16


State 53

   36 lvalue: lvalue DOT . ID

    ID  shift, and go to state 89


State 54

    3 exp: lvalue ASSIGN . exp
